Feat: main game factory 버튼 선택 추가

--- a/index.html
+++ b/index.html
@@ -10,5 +10,14 @@
     <header>
         <h1>프리코스 게임 공장</h1>
     </header>
+
+    <main>
+        <a href="racing-car.html" class="game-factory-button">
+            <h2>자동차 경주 게임</h2>
+        </a>
+        <a href="lotto.html" class="game-factory-button">
+            <h2>로또 게임</h2>
+        </a>
+    </main>
 </body>
 </html>
