feat: ResultScreen 인터랙션 및 UI 디자인 완성
- ResultScreen.js: 텍스트 웨이브 효과 및 무한 롤링(coin-flow) 로직 추가
- result-screen.css: 승리(골드)/패배(레드) 테마 및 네온 스타일링 적용

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323:wght@400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/betting-screen.css">
+    <link rel="stylesheet" href="./css/result-screen.css">
 </head>
 <body>
     <main id="game-screen-container"></main>
