--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323:wght@400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/betting-screen.css">
+    <link rel="stylesheet" href="./css/race-screen.css">
     <link rel="stylesheet" href="./css/result-screen.css">
 </head>
 <body>
@@ -18,6 +18,6 @@
         <p>&copy; 김이신</p>
     </footer>
 
-    <script type="module" src="./src/utils/index.js"></script>
+    <script type="module" src="./src/index.js"></script>
 </body>
 </html>
